packages/sortable-list/src/components/item/index.module.css
@import '@alfalab/core-components-vars/src/index.css';

.component {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    min-height: 48px;

    &:hover {
        & .icon {
            color: var(--color-light-neutral-translucent-1300);
        }
    }
}

.activator-cell:not(.disabled) {
    cursor: grab;

    &.dragOverlay {
        cursor: grabbing;
    }
}

.activator-control:not(.disabled) {
    & .icon {
        cursor: grab;
    }

    &.dragOverlay .icon {
        cursor: grabbing;
    }
}

.content {
    flex: 1;
}

.icon {
    flex-shrink: 0;
    color: var(--color-light-neutral-translucent-700);
}

.dragging {
    opacity: 0;
}

.dragOverlay {
    box-shadow: var(--shadow-s);
    animation: pop 200ms ease;

    & .icon {
        color: var(--color-light-neutral-translucent-1300);
    }
}

@each $size in 2, 4, 8, 12, 16, 20 {
    .control-left-padding-$(size) {
        padding-left: var(--gap-$(size));
    }

    .control-right-padding-$(size) {
        padding-right: var(--gap-$(size));
    }
}

@keyframes pop {
    from {
        box-shadow: none;
    }
    to {
        box-shadow: var(--shadow-s);
    }
}

